Implement Promised Link

--- a/client/less/1.less
+++ b/client/less/1.less
@@ -145,6 +145,13 @@ header a, header a:visited{
 	display: inline-block;
 }
 
+
+.plate-list{
+	.plate-item{
+		display: flex;
+	}
+}
+
 .story{
 	.byline{
 		color: #555;
