--- a/server/views/react.njk
+++ b/server/views/react.njk
@@ -2,17 +2,7 @@
 <head>
 	<link rel="stylesheet" type="text/css" href="/css/1.css">
 	<script>
-	;(() => {
-		let resources = {{resources|safe}};
-		window.REACT_INIT_LOADER = {
-			endpoints: resources,
-			fetches: resources.map( x => fetch(x)
-				.then( r => r.json() )
-				.catch( e => console.error(e) )
-			)
-		}
-
-	})()
+		{% include "initLoader.js" %}
 	</script>
 	<script defer src='/js/bundle.js' ></script>
 </head>
