--- a/server/views/react.njk
+++ b/server/views/react.njk
@@ -1,10 +1,11 @@
 <html>
 <head>
-	<link rel="stylesheet" type="text/css" href="/css/1.css">
+	<link rel="stylesheet" type="text/css" href="/css/main.css">
 	<script>
 		{% include "initLoader.js" %}
 	</script>
 	<script defer src='/js/bundle.js' ></script>
+	<title>Potato</title>
 </head>
 <body></body>
 </html>
