--- a/server/views/layout.njk
+++ b/server/views/layout.njk
@@ -8,29 +8,31 @@
 </head>
 
 <body>
-	<header>
-		<div id='header-left'>
-			<div id='logo'>
-				<a href="/"><span>Potato</span></a>
-			</div>
-		</div>
+  <div id='react-body'>
+  	<header>
+  		<div id='header-left'>
+  			<div id='logo'>
+  				<a href="/"><span>Potato</span></a>
+  			</div>
+  		</div>
 
-		<div id='header-right'>
-			<a href='/submit'>Submit</a>
-			<a href='/login' id='login-thing'>Login</a>
-			<script>
-				if( /authtoken/.test(document.cookie) ){
-					var el = document.querySelector('#login-thing')
-					el.innerHTML = 'Profile'
-					el.href = '/profile'
-				}
-			</script>
-		</div>
-	</header>
-	<section id='message-popup'></section>
-	<section id='content'>
-		{% block content %}{% endblock %}
-	</section>
+  		<div id='header-right'>
+  			<a href='/submit'>Submit</a>
+  			<a href='/login' id='login-thing'>Login</a>
+  			<script>
+  				if( /authtoken/.test(document.cookie) ){
+  					var el = document.querySelector('#login-thing')
+  					el.innerHTML = 'Profile'
+  					el.href = '/profile'
+  				}
+  			</script>
+  		</div>
+  	</header>
+  	<section id='message-popup'></section>
+  	<section id='content'>
+  		{% block content %}{% endblock %}
+  	</section>
+  <div>
 	<script src='/js/bundle.js' ></script>
 </body>
 </html>
