Implement homepage and tags

--- a/client/less/content.less
+++ b/client/less/content.less
@@ -1,19 +1,20 @@
 
 .story > .content, .comment > .content{
 
+	max-width: 690px;
+
 	font-size: 15px;
 
 	code{
 		background-color: #eee;
-		padding: 1px 5px;
-	}
-
-	code{
-		background-color: #eee;
-		padding: 1px 5px;
 	}
 
 	li{
 		margin: 0px 0px 4px 0px;
+	}
+
+	pre{
+		overflow-x: auto;
+		background-color: #eee;
 	}
 }
