--- a/client/less/main.less
+++ b/client/less/main.less
@@ -82,20 +82,6 @@ a:hover{
 	justify-content: center;
 }
 
-.tagline{
-	display: flex;
-}
-.tagline > .tag{
-	margin:0px 6px 0px 0px;
-}
-
-.tag, .tag:visited{
-	background: #E1ECF4;
-	color: #206090;
-	padding: 1px 4px;
-	display: inline-block;
-}
-
 .login-section{
 	form > input{
 		display: block;
@@ -110,3 +96,5 @@ a:hover{
 @import 'comment.less';
 @import 'loader.less';
 @import 'content.less';
+@import 'tag.less';
+@import 'homepage.less';
