--- a/client/less/header.less
+++ b/client/less/header.less
@@ -21,24 +21,20 @@ header{
 	margin: 0px auto;
 	max-width: 1000px;
 	line-height: 150%;
+	padding-bottom: 16px;
 
 	#header-left{
-		width: 300px;
+
 	}
 
 	#header-right{
 		display: flex;
 		white-space: nowrap;
 
-		> a{
-			padding: 0px 0px 0px 12px;
-		}
-
 	}
 
 
 }
-
 
 
 #nav{
@@ -54,4 +50,26 @@ header{
 	display: block;
 	padding: 0px 6px;
 
+}
+
+
+.plates-dropdown{
+
+	position: relative;
+
+	padding-left: 4px;
+
+	.details{
+		display: none;
+		position: absolute;
+		border: 1px solid #ccc;
+		width: 300px;
+		top: 20px;
+		right: 0px;
+		background-color: white;
+
+		&.open{
+			display: block;
+		}
+	}
 }
