--- a/client/less/plateList.less
+++ b/client/less/plateList.less
@@ -12,8 +12,14 @@
 	padding: 8px 0px;
 
 	> .up{
+		display: flex;
+		align-items: center;
 		font-size: 17px;
 		color: #000;
+
+		.title{
+			padding-right: 6px;
+		}
 	}
 
 	> .middle{
