--- a/client/less/content.less
+++ b/client/less/content.less
@@ -2,8 +2,8 @@
 .story > .content, .comment > .content{
 
 	max-width: 690px;
-
-	font-size: 15px;
+	font-size: 16px;
+	line-height: 1.4;
 
 	code{
 		background-color: #eee;
