--- a/client/less/header.less
+++ b/client/less/header.less
@@ -14,6 +14,7 @@ header, #content{
 header a, header a:visited{
 	text-decoration: none;
 	color: inherit;
+	cursor: pointer;
 }
 
 header{
@@ -36,6 +37,9 @@ header{
 
 }
 
+.separator{
+	padding: 0px 6px;
+}
 
 #nav{
 	display: flex;
@@ -63,7 +67,7 @@ header{
 		display: none;
 		position: absolute;
 		border: 1px solid #ccc;
-		width: 300px;
+		width: 260px;
 		top: 20px;
 		right: 0px;
 		background-color: white;
