--- a/client/less/story.less
+++ b/client/less/story.less
@@ -20,6 +20,11 @@
 	.byline{
 		color: #555;
 		padding-bottom: 16px;
+
+
+		.score.like{
+			color: orange;
+		}
 	}
 	.actions > span {
 		cursor: pointer;
