--- a/server/views/layout.njk
+++ b/server/views/layout.njk
@@ -1,10 +1,7 @@
 <html>
 <head>
-    <link rel="stylesheet" type="text/css" href="/css/1.css">
+    <link rel="stylesheet" type="text/css" href="/css/main.css">
 	<!-- <script defer src='/js/bundle.js' ></script> -->
-	<style>
-		{% include 'inpage.css' %}
-	</style>
 </head>
 
 <body>
