--- a/server/views/react.njk
+++ b/server/views/react.njk
@@ -6,6 +6,7 @@
 	</script>
 	<script defer src='/js/bundle.js' ></script>
 	<title>Potato</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1" />
 </head>
 <body></body>
 </html>
