Set Title for pages

--- a/client/less/comment.less
+++ b/client/less/comment.less
@@ -16,16 +16,13 @@
 		font-size: 14px;
 		color: #666;
 
-		> span{
-			cursor: pointer;
+		.actions{
+			> a{
+				padding: 0px 3px;
+				color: #666;
+			}
 
-		}
-		> span:hover{
-			text-decoration: underline;
-		}
 
-		> span.vote:hover, span.username:hover{
-			text-decoration: none;
 		}
 
 
