--- a/client/less/main.less
+++ b/client/less/main.less
@@ -17,12 +17,14 @@ a{
 	color: #0366d6;
 
 }
-a:visited{
-	// color: inherit;
-}
 
 a:hover{
+	cursor: pointer;
 	text-decoration: underline;
+}
+
+a:visited{
+	// color: inherit;
 }
 
 .span-button{
