--- a/client/less/story.less
+++ b/client/less/story.less
@@ -21,12 +21,12 @@
 		color: #555;
 		padding-bottom: 16px;
 
-
 		.score.like{
 			color: orange;
 		}
 	}
 	.actions > span {
+		padding: 0px 4px;
 		cursor: pointer;
 	}
 
