--- a/server/views/react.njk
+++ b/server/views/react.njk
@@ -5,7 +5,7 @@
 		{% include "initLoader.js" %}
 	</script>
 	<script defer src='/js/bundle.js' ></script>
-	<title>Potato</title>
+	<title>Krust</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
 </head>
 <body></body>
