Implement list of tags of a plate

--- a/client/less/plate.less
+++ b/client/less/plate.less
@@ -42,6 +42,13 @@
 		padding: 14px 0px 6px;
 		line-height: 22px;
 
+		>.right{
+			float: right;
+			>a{
+				padding-left: 6px;
+			}
+		}
+
 		> .filter-tabs > a{
 			padding-right: 6px;
 		}
