--- a/client/less/tag.less
+++ b/client/less/tag.less
@@ -18,3 +18,13 @@
 	padding: 1px 4px;
 	display: inline-block;
 }
+
+
+.plate-tags{
+	.item{
+		height: 30px;
+		a{
+			margin-right: 12px;
+		}
+	}
+}
