Fix tag counting for story editing, deleting

--- a/client/less/content.less
+++ b/client/less/content.less
@@ -1,6 +1,12 @@
 
 .story > .content, .comment > .content{
 
+	h1, h2, h3, h4{
+		font-size: 1.2em;
+		margin: 1em 0 1em 0;
+	}
+
+
 
 	color: #262626;
 	max-width: 690px;
@@ -18,5 +24,20 @@
 	pre{
 		overflow-x: auto;
 		background-color: #eee;
+	}
+}
+
+.story > .content{
+	margin-top: 1em;
+	p{
+		margin: 0 0 1em 0;
+	}
+}
+
+.comment > .content{
+	margin-top: 0.2em;
+
+	p{
+		margin: 0 0 0.5em 0;
 	}
 }
