Introduce sidebar in plate page; Centralize post

--- a/client/less/main.less
+++ b/client/less/main.less
@@ -10,6 +10,8 @@ body{
 	font-family: Arial,sans-serif;
 	line-height: 1.24;
 	font-size: 14px;
+	// padding: 0 2px;
+	margin: 0px 8px;
 }
 
 a{
@@ -35,12 +37,11 @@ a:visited{
 	text-decoration: underline;
 	cursor: pointer;
 }
-
 #react-body{
-	margin: 0px auto;
-	padding: 16px 0px;
-	max-width: 920px;
-	/*background: #eee;*/
+	> *{
+		margin: auto;
+		max-width: 1080px;
+	}
 }
 
 #story-form{
