--- a/client/less/content.less
+++ b/client/less/content.less
@@ -6,15 +6,14 @@
 		margin: 1em 0 1em 0;
 	}
 
-
-
 	color: #262626;
-	max-width: 690px;
 	font-size: 16px;
-	line-height: 1.4;
+	line-height: 1.45;
 
 	code{
-		background-color: #eee;
+		padding: 0.2em 0.4em;
+		font-size: 85%;
+		background-color: rgba(27,31,35,0.05);
 	}
 
 	li{
@@ -23,7 +22,12 @@
 
 	pre{
 		overflow-x: auto;
-		background-color: #eee;
+		background-color: #f3f5f6;
+		padding: 5px;
+		> code{
+			padding: 0;
+			background-color: unset;
+		}
 	}
 }
 
@@ -35,9 +39,9 @@
 }
 
 .comment > .content{
-	margin-top: 0.2em;
+	margin-top: 3px;
 
 	p{
-		margin: 0 0 0.5em 0;
+		margin: 0 0 3px 0;
 	}
 }
