--- a/client/less/header.less
+++ b/client/less/header.less
@@ -5,7 +5,7 @@ header{
 }
 
 header, #content{
-	max-width: 920px;
+	max-width: 1080px;
 	margin-left: auto;
 	margin-right: auto;
 	font-size: 16px;
@@ -20,8 +20,9 @@ header a, header a:visited{
 header{
 	display: flex;
 	margin: 0px auto;
-	max-width: 1000px;
+	max-width: 1080px;
 	line-height: 150%;
+	padding-top: 16px;
 	padding-bottom: 16px;
 
 	#header-left{
