--- a/client/less/plate.less
+++ b/client/less/plate.less
@@ -36,10 +36,23 @@
 	background-color: #eee;
 }
 
+.plate-page{
+	display: flex;
+}
+
+.plates-sidebar{
+	width: 170px;
+	font-size: 16px;
+
+	.item {
+		padding-bottom: 10px;
+	}
+}
 
 .plate{
+	flex-grow: 1;
 	> .top-bar{
-		padding: 14px 0px 6px;
+		padding: 0px 0px 6px;
 		line-height: 22px;
 
 		>.right{
