--- a/server/views/react.njk
+++ b/server/views/react.njk
@@ -8,5 +8,6 @@
 	<title>Krust</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
 </head>
-<body></body>
+<body>
+</body>
 </html>
