Use sessionStorage to cache page requests

--- a/client/less/header.less
+++ b/client/less/header.less
@@ -34,8 +34,6 @@ header{
 		white-space: nowrap;
 
 	}
-
-
 }
 
 .separator{
@@ -64,11 +62,16 @@ header{
 
 	padding-left: 4px;
 
+	.dropdown-summary{
+		cursor: default;
+	}
+
 	.details{
 		display: none;
 		position: absolute;
 		border: 1px solid #ccc;
-		width: 260px;
+		width: 220px;
+		z-index: 1;
 		top: 20px;
 		right: 0px;
 		background-color: white;
