--- a/client/less/plate.less
+++ b/client/less/plate.less
@@ -1,6 +1,6 @@
 
 .story-item{
-	padding: 8px 0px;
+	padding-bottom: 16px;
 
 	> .up{
 		// display: flex;
@@ -43,6 +43,7 @@
 .plates-sidebar{
 	width: 170px;
 	font-size: 16px;
+	flex-shrink: 1;
 
 	.item {
 		padding-bottom: 10px;
@@ -50,6 +51,7 @@
 }
 
 .plate{
+	width: 910px;
 	flex-grow: 1;
 	> .top-bar{
 		padding: 0px 0px 6px;
