--- a/client/less/homepage.less
+++ b/client/less/homepage.less
@@ -1,5 +1,11 @@
 .homepage{
 	display: flex;
+	flex-flow: column;
+}
+@media screen and (min-width: 560px){
+	.homepage{
+		flex-flow: row;
+	}
 }
 
 
