--- a/client/less/plate.less
+++ b/client/less/plate.less
@@ -1,3 +1,8 @@
+@media screen and (max-width: 560px) {
+	.plate-page > .plates-sidebar{
+		display: none;
+	}
+}
 
 .story-item{
 	padding-bottom: 16px;
@@ -51,7 +56,7 @@
 }
 
 .plate{
-	width: 910px;
+	max-width: 910px;
 	flex-grow: 1;
 	> .top-bar{
 		padding: 0px 0px 6px;
