--- a/client/less/homepage.less
+++ b/client/less/homepage.less
@@ -1,19 +1,19 @@
 .homepage{
-	display: flex;
-	flex-flow: column;
-}
-@media screen and (min-width: 560px){
-	.homepage{
-		flex-flow: row;
-	}
+  display: flex;
+  flex-flow: column;
 }
 
+@media screen and (min-width: 560px){
+  .homepage{
+    flex-flow: row;
+  }
+}
 
 .hot-plates{
-	width: 160px;
+  width: 160px;
 }
 
 .hot-plates > .list > .item{
-	padding: 4px 0px;
-	font-size: 16px;
+  padding: 4px 0;
+  font-size: 16px;
 }
