--- a/client/less/loader.less
+++ b/client/less/loader.less
@@ -1,8 +1,8 @@
 .loader {
-  margin: 0px 8px;
+  margin: 0 8px;
   display: inline-block;
   width: 12px;
-  height:2px;
+  height: 2px;
   background: black;
   animation: spin 1.5s linear infinite;
 }
