--- a/client/less/plateList.less
+++ b/client/less/plateList.less
@@ -1,39 +1,39 @@
 .plate-list-page{
-	padding: 6px 0px;
-	.create-plate{
-		display: flex;
-		justify-content: flex-end;
+  padding: 6px 0;
 
-	}
+  .create-plate{
+    display: flex;
+    justify-content: flex-end;
+  }
 }
 
-
 .plate-list{
-	.plate-item{
-		display: flex;
-		padding: 4px 0px;
-		font-size: 16px;
-	}
+  .plate-item{
+    display: flex;
+    padding: 4px 0;
+    font-size: 16px;
+  }
 }
 
 #create-plate-form{
-	> div{
-		display: flex;
-	}
+  > div{
+    display: flex;
+  }
 
-	input, textarea{
-		width: 540px;
-		margin: 6px 0px;
-		font-size: 16px;
-		font-family: Arial,sans-serif;
-		flex-shrink: 1;
-	}
+  input,
+  textarea{
+    width: 540px;
+    margin: 6px 0;
+    font-size: 16px;
+    font-family: Arial, sans-serif;
+    flex-shrink: 1;
+  }
 
-	input{
-		height: 28px;
-	}
+  input{
+    height: 28px;
+  }
 
-	textarea{
-		height: 200px;
-	}
+  textarea{
+    height: 200px;
+  }
 }
