--- a/client/less/story.less
+++ b/client/less/story.less
@@ -1,51 +1,51 @@
 #react-body > .story-page{
-	max-width: 740px;
-	> * {
-		margin: auto;
-		max-width: 740px;
-	}
+  max-width: 740px;
+
+  > * {
+    margin: auto;
+    max-width: 740px;
+  }
 }
 
 .story{
-	.goback{
-		cursor: pointer;
-	}
+  .goback{
+    cursor: pointer;
+  }
 
-	h1{
-		font-size: 16px;
-	}
+  h1{
+    font-size: 16px;
+  }
 
-	> .title{
-		font-size: 24px;
-		display: flex;
-		justify-content: space-between;
-		padding: 20px 0px;
+  > .title{
+    font-size: 24px;
+    display: flex;
+    justify-content: space-between;
+    padding: 20px 0;
+  }
 
-	}
+  > .authors{
+    font-size: 16px;
+    padding: 12px 0;
+  }
 
-	> .authors{
-		font-size: 16px;
-		padding: 12px 0px;
-	}
+  .byline{
+    color: #555;
+    padding-bottom: 16px;
 
-	.byline{
-		color: #555;
-		padding-bottom: 16px;
+    .score.like{
+      color: orange;
+    }
+  }
 
-		.score.like{
-			color: orange;
-		}
-	}
-	.actions > span {
-		padding: 0px 4px;
-		cursor: pointer;
-	}
+  .actions > span {
+    padding: 0 4px;
+    cursor: pointer;
+  }
 
-	.edit-story-form{
-		textarea{
-			width: 400px;
-			height: 140px;
-		}
-	}
-
+  .edit-story-form{
+    textarea{
+      width: 400px;
+      height: 140px;
+    }
+  }
 }
