--- a/client/less/tag.less
+++ b/client/less/tag.less
@@ -1,30 +1,32 @@
 
 .tagline{
-	display: flex;
-	font-size: 12px
+  display: flex;
+  font-size: 12px;
 }
+
 .tagline > .tag{
-	margin: 0px 6px 0px 0px;
+  margin: 0 6px 0 0;
 }
 
 .tag{
-	cursor: pointer;
-	white-space: nowrap;
+  cursor: pointer;
+  white-space: nowrap;
 }
 
-.tag, .tag:visited{
-	background: #E1ECF4;
-	color: #206090;
-	padding: 1px 4px;
-	display: inline-block;
+.tag,
+.tag:visited{
+  background: #e1ecf4;
+  color: #206090;
+  padding: 1px 4px;
+  display: inline-block;
 }
-
 
 .plate-tags{
-	.item{
-		height: 30px;
-		a{
-			margin-right: 12px;
-		}
-	}
+  .item{
+    height: 30px;
+
+    a{
+      margin-right: 12px;
+    }
+  }
 }
