--- a/client/less/header.less
+++ b/client/less/header.less
@@ -1,83 +1,76 @@
 
 header{
-	display: flex;
-	justify-content: space-between;
+  display: flex;
+  justify-content: space-between;
 }
 
-header, #content{
-	max-width: 1080px;
-	margin-left: auto;
-	margin-right: auto;
-	font-size: 16px;
+header,
+#content{
+  max-width: 1080px;
+  margin-left: auto;
+  margin-right: auto;
+  font-size: 16px;
 }
 
-header a, header a:visited{
-	text-decoration: none;
-	color: inherit;
-	cursor: pointer;
+header a,
+header a:visited{
+  text-decoration: none;
+  color: inherit;
+  cursor: pointer;
 }
 
 header{
-	display: flex;
-	margin: 0px auto;
-	max-width: 1080px;
-	line-height: 150%;
-	padding-top: 16px;
-	padding-bottom: 16px;
+  display: flex;
+  margin: 0 auto;
+  max-width: 1080px;
+  line-height: 150%;
+  padding-top: 16px;
+  padding-bottom: 16px;
 
-	#header-left{
-
-	}
-
-	#header-right{
-		display: flex;
-		white-space: nowrap;
-
-	}
+  #header-right{
+    display: flex;
+    white-space: nowrap;
+  }
 }
 
 .separator{
-	padding: 0px 6px;
+  padding: 0 6px;
 }
 
 #nav{
-	display: flex;
+  display: flex;
 }
 
 #logo{
-	display: flex;
-	margin-right: 40px;
+  display: flex;
+  margin-right: 40px;
 }
 
-#nav>a{
-	display: block;
-	padding: 0px 6px;
-
+#nav > a{
+  display: block;
+  padding: 0 6px;
 }
-
 
 .plates-dropdown{
+  position: relative;
+  padding-left: 4px;
 
-	position: relative;
+  .dropdown-summary{
+    cursor: default;
+  }
 
-	padding-left: 4px;
+  .details{
+    display: none;
+    position: absolute;
+    border: 1px solid #ccc;
+    width: 220px;
+    z-index: 1;
+    top: 20px;
+    right: 0;
+    background-color: white;
 
-	.dropdown-summary{
-		cursor: default;
-	}
-
-	.details{
-		display: none;
-		position: absolute;
-		border: 1px solid #ccc;
-		width: 220px;
-		z-index: 1;
-		top: 20px;
-		right: 0px;
-		background-color: white;
-
-		&.open{
-			display: block;
-		}
-	}
+    &.open{
+      display: block;
+    }
+  }
 }
