--- a/client/less/content.less
+++ b/client/less/content.less
@@ -1,61 +1,56 @@
-.comment-tree {
-  position: relative;
-}
 
-.comment {
-  padding: 0;
-  margin-left: 19px;
+.story > .content,
+.comment > .content{
+  color: #262626;
+  line-height: 1.45;
 
-  .byline {
-    font-size: 14px;
-    color: #888;
+  h1,
+  h2,
+  h3,
+  h4{
+    font-size: 1.2em;
+    margin: 1em 0;
+  }
 
-    .actions {
-      > a {
-        color: #888;
-        padding: 0 3px;
-      }
-    }
+  code{
+    padding: 0.2em 0.4em;
+    font-size: 85%;
+    background-color: rgba(27, 31, 35, 0.05);
+  }
 
-    > .collapse {
-      position: absolute;
-      left: 0;
-      height: 100%;
-      user-select: none;
-      margin: 0;
-      padding: 0 1px;
-      font-size: 12px;
-      color: #999;
-    }
+  li{
+    margin: 0 0 4px;
+  }
 
-    > .collapse:hover {
-      background-color: #eee;
-    }
+  pre{
+    overflow-x: auto;
+    background-color: #f3f5f6;
+    padding: 5px;
 
-    > .vote.like {
-      color: orange;
+    > code{
+      padding: 0;
+      background-color: unset;
     }
   }
 }
 
-.comment-form {
-  > div {
-    display: flex;
-  }
+.comment > .content{
+  font-size: 17px;
+}
 
-  textarea {
-    width: 400px;
-    height: 114px;
-    flex-shrink: 1;
-  }
+.story > .content{
+  margin-top: 1em;
+  font-size: 18px;
 
-  .bottom {
-    padding: 6px 0;
+  p{
+    margin: 0 0 1em;
   }
 }
 
-.comment-tree {
-  > .children {
-    padding-left: 16px;
+.comment > .content{
+  margin-top: 3px;
+
+  p{
+    margin: 0 0 3px;
   }
 }
