Use online font 'Open-Sans'

--- a/client/less/plate.less
+++ b/client/less/plate.less
@@ -12,6 +12,7 @@
     width: 20px;
     font-size: 17px;
     text-align: center;
+		color: hsla(209, 3%, 50%, 1)
   }
 
   > .right{
@@ -32,7 +33,7 @@
       }
     }
 
-    > .middle{
+    > .bottom{
       font-size: 13px;
       color: #717171;
 
