--- a/server/views/react.njk
+++ b/server/views/react.njk
@@ -1,13 +1,16 @@
 <html>
 <head>
 	<link rel="stylesheet" type="text/css" href="/css/main.css">
-	<script>
-		{% include "initLoader.js" %}
-	</script>
+	<style>{% include "open-sans.css" %}</style>
+	<script>{% include "initLoader.js" %}</script>
 	<script defer src='/js/bundle.js' ></script>
 	<title>Krust</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
 </head>
 <body>
+	<span id='hack' style="color: #fff">
+		.
+		<!-- Network fonts are not downloaded if body is empty. -->
+	</span>
 </body>
 </html>
