--- a/client/less/main.less
+++ b/client/less/main.less
@@ -7,7 +7,7 @@ html{
 }
 
 body{
-  font-family: Arial, sans-serif;
+  font-family: 'Open Sans', sans-serif;
   line-height: 1.24;
   font-size: 14px;
   // padding: 0 2px;
