--- a/client/less/plate.less
+++ b/client/less/plate.less
@@ -5,7 +5,7 @@
 }
 
 .story-item{
-  padding-bottom: 16px;
+  margin-bottom: 16px;
 
   > .left{
     position: absolute;
@@ -22,11 +22,19 @@
       font-size: 17px;
       color: #000;
 
-      .title{
+      > .title{
         padding-right: 6px;
       }
 
-      .tagline{
+      > .link{
+        font-size: 12px;
+        position: relative;
+        top: -2px;
+        padding-right: 4px;
+        color: #75828a;
+      }
+
+      > .tagline{
         display: inline-block;
         position: relative;
         top: -2px;
