Implement oauth for google

--- a/client/less/header.less
+++ b/client/less/header.less
@@ -51,21 +51,23 @@ header{
   padding: 0 6px;
 }
 
-.plates-dropdown{
+
+.menu{
+
   position: relative;
-  padding-left: 4px;
 
-  .dropdown-summary{
-    cursor: default;
+  .hamburger{
+    padding-left: 4px;
+    cursor: pointer;
   }
-
   .details{
     display: none;
     position: absolute;
-    border: 1px solid #ccc;
-    width: 220px;
+    border-radius: 3px;
+    border: 1px solid #ddd;
+    width: 210px;
     z-index: 1;
-    top: 20px;
+    top: 24px;
     right: 0;
     background-color: white;
 
