Add spaces between tags otherwise they don't wrap

--- a/client/less/plate.less
+++ b/client/less/plate.less
@@ -6,11 +6,11 @@
 
 .story-item{
   margin-bottom: 16px;
+  font-size: 17px;
 
   > .left{
     position: absolute;
     width: 20px;
-    font-size: 17px;
     text-align: center;
 		color: hsla(209, 3%, 50%, 1)
   }
@@ -19,26 +19,19 @@
     margin-left: 22px;
 
     > .up{
-      font-size: 17px;
       color: #000;
 
       > .title{
         padding-right: 6px;
+        vertical-align: middle;
       }
 
       > .link{
         font-size: 12px;
-        position: relative;
-        top: -2px;
         padding-right: 4px;
         color: #75828a;
       }
 
-      > .tagline{
-        display: inline-block;
-        position: relative;
-        top: -2px;
-      }
     }
 
     > .bottom{
