--- a/client/less/tag.less
+++ b/client/less/tag.less
@@ -1,6 +1,5 @@
 
 .tagline{
-  display: flex;
   font-size: 12px;
 }
 
@@ -8,9 +7,11 @@
   margin: 0 6px 0 0;
 }
 
+
 .tag{
   cursor: pointer;
   white-space: nowrap;
+  line-height: 15px;
 }
 
 .tag,
@@ -18,7 +19,6 @@
   background: #e1ecf4;
   color: #206090;
   padding: 1px 4px;
-  display: inline-block;
 }
 
 .plate-tags{
