--- a/server/views/react.njk
+++ b/server/views/react.njk
@@ -1,11 +1,13 @@
 <html lang='zh'>
 <head>
+	<link rel="manifest" href="/manifest.json">
 	<link rel="stylesheet" type="text/css" href="/css/main.css">
 	<style>{% include "open-sans.css" %}</style>
 	<script>{% include "initLoader.js" %}</script>
+	<script>{% include "swRegister.js" %}</script>
 	<script defer src='/js/bundle.js' ></script>
-	<title>Krust</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<title>Krust</title>
 </head>
 <body>
 	<span id='hack' style="color: #fff">
