--- a/server/views/react.njk
+++ b/server/views/react.njk
@@ -4,7 +4,7 @@
 	<link rel="stylesheet" type="text/css" href="/css/main.css">
 	<style>{% include "open-sans.css" %}</style>
 	<script>{% include "initLoader.js" %}</script>
-	<script>{% include "swRegister.js" %}</script>
+	<!-- <script>{% include "swRegister.js" %}</script> -->
 	<script defer src='/js/bundle.js' ></script>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Krust</title>
