--- a/client/less/main.less
+++ b/client/less/main.less
@@ -12,6 +12,7 @@ body{
   font-size: 14px;
   // padding: 0 2px;
   margin: 0 8px;
+  background: #f1f3f5;
 }
 
 a{
@@ -88,3 +89,4 @@ a:visited{
 @import 'tag.less';
 @import 'homepage.less';
 @import 'plate.less';
+@import 'misc.less';
