--- a/client/less/plate.less
+++ b/client/less/plate.less
@@ -32,8 +32,8 @@
       font-size: 13px;
       color: #717171;
 
-      > a{
-        color: #4070d0;
+      a{
+        color: inherit;
       }
     }
   }
