Redesign Storyitem for mobile view

--- a/client/less/main.less
+++ b/client/less/main.less
@@ -80,6 +80,10 @@ a:visited{
   }
 }
 
+.pointer{
+  cursor: pointer;
+}
+
 @import 'header.less';
 @import 'plateList.less';
 @import 'story.less';
@@ -89,4 +93,5 @@ a:visited{
 @import 'tag.less';
 @import 'homepage.less';
 @import 'plate.less';
+@import 'storyItem.less';
 @import 'misc.less';
