--- a/client/less/plate.less
+++ b/client/less/plate.less
@@ -1,47 +1,4 @@
-.story-item{
-  margin-bottom: 16px;
-  font-size: 17px;
 
-  > .left{
-    position: absolute;
-    width: 20px;
-    text-align: center;
-		color: hsla(209, 3%, 50%, 1)
-  }
-
-  > .right{
-    margin-left: 22px;
-
-    > .up{
-      color: #000;
-
-      > .title{
-        padding-right: 6px;
-        vertical-align: middle;
-      }
-
-      > .link{
-        font-size: 12px;
-        padding-right: 4px;
-        color: #75828a;
-      }
-
-    }
-
-    > .bottom{
-      font-size: 13px;
-      color: #717171;
-
-      a{
-        color: inherit;
-      }
-    }
-  }
-}
-
-.story-item.cursor-here{
-  background-color: #eee;
-}
 
 .plate-page{
   display: flex;
@@ -69,14 +26,12 @@
     line-height: 22px;
 
     > .filter-tabs{
-
       > *{
         margin-right: 6px;
       }
     }
 
     > .right{
-
       > a{
         padding-left: 6px;
       }
@@ -90,8 +45,9 @@
 
 .dropdown.time{
   .summary{
-      color: #0366D5
+    color: #0366d5;
   }
+
   .details{
     > *{
       padding: 4px 6px;
