--- a/client/less/tag.less
+++ b/client/less/tag.less
@@ -4,9 +4,8 @@
 }
 
 .tagline > .tag{
-  margin: 0 6px 0 0;
+  margin-right: 4px;
 }
-
 
 .tag{
   cursor: pointer;
@@ -18,7 +17,7 @@
 .tag:visited{
   background: #e1ecf4;
   color: #206090;
-  padding: 1px 4px;
+  padding: 0 4px;
 }
 
 .plate-tags{
