--- a/client/less/story.less
+++ b/client/less/story.less
@@ -9,9 +9,9 @@
 
 .story{
   .goback{
-    cursor: pointer;
+    margin-bottom: 13px;
+    padding-left: 5px;
   }
-
   h1{
     font-size: 16px;
   }
@@ -28,13 +28,11 @@
     padding: 12px 0;
   }
 
-  .byline{
-    color: #555;
+  .actions{
+    color: #717171;
+    padding-left: 19px;
     padding-bottom: 16px;
-
-    .score.like{
-      color: orange;
-    }
+    font-size: 13px;
   }
 
   .actions > span {
