--- a/server/views/react.njk
+++ b/server/views/react.njk
@@ -7,6 +7,7 @@
 	<link rel="manifest" href="/manifest.json">
 	<link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="/css/main.css">
+	<script src="https://use.fontawesome.com/e0a4d92771.js"></script>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
